SecurityPOC/force-app/main/default/objects/Events__c/Events__c.object-meta.xml
<CustomObject>
    <label>Events</label>
    <nameField>
        <label>Events Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>