SecurityPOC/force-app/main/default/objects/Events__c/fields/Access_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Access_Instructions__c</fullName>
    <label>Access Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>