SecurityPOC/force-app/main/default/objects/Events__c/fields/Description_of_Equipment_Required__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Equipment_Required__c</fullName>
    <label>Description of Equipment Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>