SecurityPOC/force-app/main/default/objects/Events__c/fields/Equipment_Required__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment Required?</label>
    <type>Checkbox</type>
</CustomField>