SecurityPOC/force-app/main/default/objects/Events__c/fields/Estimated_Crowd_Size__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Crowd_Size__c</fullName>
    <label>Estimated Crowd Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>