SecurityPOC/force-app/main/default/objects/Events__c/fields/Event_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Event_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Events (Event Supervisor)</relationshipLabel>
    <relationshipName>Events1</relationshipName>
    <type>Lookup</type>
</CustomField>