SecurityPOC/force-app/main/default/objects/Events__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>