SecurityPOC/force-app/main/default/objects/Events__c/fields/Number_of_Guards_Needed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Guards_Needed__c</fullName>
    <label>Number of Guards Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>