SecurityPOC/force-app/main/default/objects/Events__c/fields/Planning_Stage__c.field-meta.xml
<CustomField>
    <fullName>Planning_Stage__c</fullName>
    <label>Planning Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry Received</fullName>
            </value>
            <value>
                <fullName>Quote Sent</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>