SecurityPOC/force-app/main/default/objects/Events__c/fields/Quote_Estimate_Sent__c.field-meta.xml
<CustomField>
    <fullName>Quote_Estimate_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote/Estimate Sent?</label>
    <type>Checkbox</type>
</CustomField>