SecurityPOC/force-app/main/default/objects/Events__c/fields/Uniform_Required__c.field-meta.xml
<CustomField>
    <fullName>Uniform_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uniform Required?</label>
    <type>Checkbox</type>
</CustomField>